--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
      <header>
 	 
 	      <h1>Welcome to my Website!</h1>
-		  
+		  <nav>
+
+            <a href="index.html">Home</a> |
+
+            <a href="about.html">About</a> |
+
+            <a href="contact.html">Contact</a>
      </header>
 	 
 	 <main>
@@ -39,3 +45,4 @@
 </body>
 
 </html>  
+
