--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="about.html">About</a> |
 
             <a href="contact.html">Contact</a>
+		  </nav>
      </header>
 	 
 	 <main>
@@ -45,4 +46,5 @@
 </body>
 
 </html>  
+
 
