--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
 
   <footer>
 
-  <p>&copy:2025 Your Name</p>
+  <p>&copy:2025 Lefa Atang Mmemo</p>
 
   </footer> 
 
 </body>
 
 </html>  
+
 
 
 
