--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 	  
 	  <a href="about.html">About</a>|
 	  
-	  <a href="contact.html"Contact</a>
+	  <a href="contact.html">Contact</a>
 	  
      </nav>
 	 
@@ -34,7 +34,7 @@
 	
 	  <p>Hi! i'am a beginner web developer learning how to use GitHub Pages.</p>
 	  
-	  <p> This is my first multi-page website,and i'm exicited to share it with you!</p>
+	  <p>This is my first multi-page website,and i'm exicited to share it with you!</p>
 	  
 	</main>
 	
@@ -47,4 +47,5 @@
  </body>
  
  </html>
+
 	
